apps/immich-kiosk/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich-kiosk
  labels:
    app.kubernetes.io/part-of: wall-panels
