apps/immich-kiosk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-kiosk
  namespace: immich-kiosk
  labels:
    app.kubernetes.io/name: immich-kiosk
spec:
  selector:
    app.kubernetes.io/name: immich-kiosk
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
